--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 JWT_SECRET=JWT_SECRET_AUTH_SINBOOK_TOKEN
+JWT_ACCESS_TOKEN_EXPIRES=60m
+JWT_REFRESH_TOKEN_EXPIRES=7d
+
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
