--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
       "#user/*": ["user/*"],
       "#utils/*": ["utils/*"],
       "#file/*": ["file/*"],
+      "#conversations/*": ["conversations/*"],
     }
   }
 }
