--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.3.3",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/websockets": "^10.3.3",
     "@prisma/client": "^5.9.1",
@@ -44,11 +43,11 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "socket.io": "^4.7.4"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.4",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/serve-static": "^4.0.1",
     "@nestjs/testing": "^10.0.0",
@@ -60,6 +59,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
