--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,9 @@
       "#user/*": ["user/*"],
       "#utils/*": ["utils/*"],
       "#file/*": ["file/*"],
-      "#conversations/*": ["conversations/*"],
+      "#conversation/*": ["conversation/*"],
+      "#message/*": ["message/*"],
+      "#chat/*": ["chat/*"]
     }
   }
 }
