start to work with chat (send messages is done)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "#config/*": ["config/*"],
       "#core/*": ["core/*"],
       "#decorators/*": ["decorators/*"],
+      "#pipes/*": ["pipes/*"],
       "#filters/*": ["filters/*"],
       "#post/*": ["post/*"],
       "#prisma/*": ["prisma/*"],
