add base chat functionality

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
       "#file/*": ["file/*"],
       "#conversation/*": ["conversation/*"],
       "#message/*": ["message/*"],
-      "#gateway/*": ["gateway/*"],
+      "#socket/*": ["socket/*"],
       "#openapi/*": ["openapi/*"],
     }
   }
