--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
+      "#adapters/*": ["adapters/*"],
       "#auth/*": ["auth/*"],
       "#comment/*": ["comment/*"],
       "#core/*": ["core/*"],
