finish feat notifications

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,9 @@
       "#core/*": ["core/*"],
       "#file/*": ["file/*"],
       "#follows/*": ["follows/*"],
+      "#like/*": ["like/*"],
       "#message/*": ["message/*"],
+      "#notification/*": ["notification/*"],
       "#openapi/*": ["openapi/*"],
       "#post/*": ["post/*"],
       "#prisma/*": ["prisma/*"],
