--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "format": "prettier --write \"@**/*.ts\" \"test/**/*.ts\"",
     "migrate:prod": "npx dotenv-cli -e .env.production npx prisma migrate dev",
     "migrate:dev": "npx dotenv-cli -e .env.development npx prisma migrate dev",
+    "migrate:stag": "npx dotenv-cli -e .env.staging npx prisma migrate dev",
     "start": "nest start",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:stag": "cross-env NODE_ENV=staging node dist/main",
     "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
