--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:admin@localhost:5432/sinbook-prod?schema=private"
+DATABASE_URL="postgresql://postgres.krdizlicczkyghdgggxg:AVNS_d3KShikKyXQejyjtgoZ@aws-0-eu-north-1.pooler.supabase.com:6543/postgres"
 
 JWT_SECRET=JWT_SECRET_AUTH_SINBOOK_TOKEN_PROD
 JWT_ACCESS_TOKEN_EXPIRES=60s
