--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:admin@local:5432/sinbook-dev?schema=private"
+DATABASE_URL="postgresql://postgres:admin@localhost:5432/sinbook-dev"
 
 JWT_SECRET=JWT_SECRET_AUTH_SINBOOK_TOKEN_DEV
 JWT_ACCESS_TOKEN_EXPIRES=30d
