--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "migrate:stag": "npx dotenv-cli -e .env.staging npx prisma migrate dev",
     "start": "nest start",
     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:dev": "cross-env NODE_ENV=development nest start",
     "start:stag": "cross-env NODE_ENV=staging node dist/main",
     "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
